# rust-api-workshop

./: Cargo.toml  README.md  config.yaml
.github/workflows/: ci.yml
src/swapi/: Cargo.toml
src/swapi/src/: lib.rs
src/swapi/tests/: main.rs
src/swapi/tests/api/: helpers.rs  main.rs  person.rs
src/swapi_mock/: Cargo.toml
src/swapi_mock/src/: lib.rs
src/traces/: Cargo.toml
src/traces/src/: lib.rs
src/workshop/: Cargo.toml
src/workshop/src/: 00_greetings.rs  lib.rs  main.rs
src/workshop/tests/api/: 00_greetings.rs  00_logs.rs  01_swapi.rs  01_swapi_docker.rs  02_swapi.rs  03_swapi_mock.rs  04_swapi_tests_cleanup.rs  04_swapi_tests_cleanup1.rs  04_swapi_tests_cleanup2.rs  04_swapi_tests_cleanup3.rs  05_taller.rs  06_taller_error.rs  07_health_check.rs  07_server_settings1.rs  07_server_settings2.rs  07_server_settings3.rs  08_health_check1.rs  08_health_check2.rs  08_taller_server.rs  08_taller_server1.rs  08_taller_server2.rs  08_taller_server3.rs  09_taller_server_error.rs  main.rs
src/yoda-taller/: Cargo.toml
src/yoda-taller/src/: lib.rs  main.rs  person.rs  routes.rs  settings.rs  startup.rs  swapi.rs  taller.rs  traces.rs
src/yoda-taller/src/server/: mod.rs  routes.rs  shutdown.rs  startup.rs  taller_route.rs
src/yoda-taller/tests/api/: health_check.rs  helpers.rs  main.rs  person.rs  swapi_mock.rs  taller.rs  taller_server.rs
src/yoda-taller/tests/api/helpers/: mod.rs  people.rs  swapi_mock.rs  test_app.rs  test_traces.rs
