[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-tracing-opentelemetry = "0.13.1"
once_cell = "1.18.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
reqwest = { version = "0.11.19", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tempfile = "3.8.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wiremock = "0.5.19"
