[package]
name = "swapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros"] }
wiremock = "0.5.13"
serde_json = "1.0.82"
