[package]
name = "workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
opentelemetry.workspace = true
axum-tracing-opentelemetry.workspace = true

tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-bunyan-formatter.workspace = true
opentelemetry-jaeger.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
serde_json.workspace = true
wiremock.workspace = true
once_cell.workspace = true
tempfile.workspace = true
