[package]
name = "yoda-taller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_fixture = []

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
serde_yaml = "0.9.25"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
axum-tracing-opentelemetry = { version = "0.10", features = ["jaeger", "otlp"] }

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.8"
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18.0"

[dev-dependencies]
yoda-taller = { path = ".", features = ["test_fixture"]}
serde_json = "1.0.103"
wiremock = "0.5.19"
once_cell = "1.18.0"
