[package]
name = "yoda-taller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_fixture = []

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
reqwest = { version = "0.11.19", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.47"
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
serde_yaml = "0.9.25"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
axum-tracing-opentelemetry = { version = "0.13.1" }

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.9"
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.20.0"

[dev-dependencies]
yoda-taller = { path = ".", features = ["test_fixture"]}
serde_json.workspace = true
wiremock.workspace = true
once_cell.workspace = true
