[package]
name = "yoda-taller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_fixture = []

[dependencies]
anyhow.workspace = true
axum-tracing-opentelemetry.workspace = true
axum.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
once_cell.workspace = true
serde_json.workspace = true
wiremock.workspace = true
yoda-taller = { path = ".", features = ["test_fixture"]}
